--- a/Pandas/笔记.md
+++ b/Pandas/笔记.md
@@ -1,4 +1,6 @@
-# pandas 有两个核心对象：DataFrame 和 Series。
-## DataFrame
+# pandas 
+**import pandas as pd**
+## 1. Creating, Reading and Writing
+pandas有两个核心对象：***DataFrame*** 和 ***Series*** 。
 
-## Series
+
