--- a/RNN/笔记.md
+++ b/RNN/笔记.md
@@ -1,1 +1,15 @@
 # RNN
+
+<div style="display: flex; justify-content: space-between;">
+    <img src="https://github.com/zjut605team/study_Notes/assets/109055774/2df57fa0-4127-4638-a3be-b2f772214ae5" alt="image1" width="400">
+    <img src="https://github.com/zjut605team/study_Notes/assets/109055774/259d87f3-11cf-4f68-a47c-8c3564a7e1e9" alt="image2" width="400">
+</div>
+
+
+
+
+<div style="display: flex; justify-content: space-between;">
+    <img src="https://github.com/zjut605team/study_Notes/assets/109055774/6f10ad2c-0942-41a3-99fd-c4e35b4294fe" alt="image4" width="300">
+    <img src="https://github.com/zjut605team/study_Notes/assets/109055774/935b9585-b6c6-4ea2-b9f0-f82dface1dc1" alt="image5" width="300">
+    <img src="https://github.com/zjut605team/study_Notes/assets/109055774/8892205d-272e-4fc8-b7eb-561911936a4b" alt="image6" width="300">
+</div>
